(feat: kesava) add report

--- a/views/product.html.twig
+++ b/views/product.html.twig
@@ -23,7 +23,7 @@
                     <div class="nav-section">
                         <div class="nav-label">PRODUCTS</div>
 
-                        <a href="#report" class="nav-item">
+                        <a href="/report" class="nav-item">
                             <svg
                                 class="nav-icon"
                                 width="20"
@@ -44,7 +44,7 @@
                             <span>Report</span>
                         </a>
 
-                        <a href="#transaction" class="nav-item">
+                        <a href="/transaction" class="nav-item">
                             <svg
                                 class="nav-icon"
                                 width="20"
