--- a/views/productCreate.html.twig
+++ b/views/productCreate.html.twig
@@ -18,7 +18,6 @@
 
                 <!-- Navigation Menu -->
                 <nav class="nav-menu">
-
                     <!-- PRODUCTS Section -->
                     <div class="nav-section">
                         <div class="nav-label">PRODUCTS</div>
@@ -67,7 +66,7 @@
                             <span>Transaction</span>
                         </a>
 
-                        <a href="#product" class="nav-item active">
+                        <a href="/product" class="nav-item active">
                             <svg
                                 class="nav-icon"
                                 width="20"
@@ -124,7 +123,11 @@
 
                     <!-- Logout -->
                     <div class="nav-logout">
-                        <a href="#logout" class="nav-item logout">
+                        <form
+                            action="/logout"
+                            method="post"
+                            class="nav-item logout"
+                        >
                             <svg
                                 class="nav-icon"
                                 width="20"
@@ -141,7 +144,7 @@
                                 <line x1="21" y1="12" x2="9" y2="12"></line>
                             </svg>
                             <span>Log Out</span>
-                        </a>
+                        </form>
                     </div>
                 </nav>
             </aside>
@@ -153,9 +156,9 @@
                         <div>
                             <h2 class="page-title">Product Create</h2>
                             <div class="breadcrumb-wrapper">
-                            <div class="breadcrumb"> Product</div>
-                            <div class="breadcrumb"> / Create</div>
-                        </div>
+                                <div class="breadcrumb">Product</div>
+                                <div class="breadcrumb">/ Create</div>
+                            </div>
                         </div>
                     </div>
 
