--- a/assets/style.css
+++ b/assets/style.css
@@ -129,6 +129,18 @@ a {
     color: #e74c3c;
 }
 
+.nav-item.logout button {
+    color: inherit;
+    font: inherit;
+    font-size: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    background-color: transparent;
+    border: none;
+}
+
 /* Main Content */
 /* Main Content */
 .main-content {
