--- a/views/productCreate.html.twig
+++ b/views/productCreate.html.twig
@@ -22,7 +22,7 @@
                     <div class="nav-section">
                         <div class="nav-label">PRODUCTS</div>
 
-                        <a href="#report" class="nav-item">
+                        <a href="/report" class="nav-item">
                             <svg
                                 class="nav-icon"
                                 width="20"
@@ -43,7 +43,7 @@
                             <span>Report</span>
                         </a>
 
-                        <a href="#transaction" class="nav-item">
+                        <a href="/transaction" class="nav-item">
                             <svg
                                 class="nav-icon"
                                 width="20"
@@ -66,7 +66,7 @@
                             <span>Transaction</span>
                         </a>
 
-                        <a href="/product" class="nav-item active">
+                        <a href="/products" class="nav-item active">
                             <svg
                                 class="nav-icon"
                                 width="20"
@@ -98,7 +98,7 @@
                     <div class="nav-section">
                         <div class="nav-label">AUTHENTICATION</div>
 
-                        <a href="#users" class="nav-item">
+                        <a href="/user" class="nav-item">
                             <svg
                                 class="nav-icon"
                                 width="20"
@@ -128,22 +128,26 @@
                             method="post"
                             class="nav-item logout"
                         >
-                            <svg
-                                class="nav-icon"
-                                width="20"
-                                height="20"
-                                viewBox="0 0 24 24"
-                                fill="none"
-                                stroke="currentColor"
-                                stroke-width="2"
-                            >
-                                <path
-                                    d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
-                                ></path>
-                                <polyline points="16 17 21 12 16 7"></polyline>
-                                <line x1="21" y1="12" x2="9" y2="12"></line>
-                            </svg>
-                            <span>Log Out</span>
+                            <button type="submit" class="logout-button">
+                                <svg
+                                    class="nav-icon"
+                                    width="20"
+                                    height="20"
+                                    viewBox="0 0 24 24"
+                                    fill="none"
+                                    stroke="currentColor"
+                                    stroke-width="2"
+                                >
+                                    <path
+                                        d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
+                                    ></path>
+                                    <polyline
+                                        points="16 17 21 12 16 7"
+                                    ></polyline>
+                                    <line x1="21" y1="12" x2="9" y2="12"></line>
+                                </svg>
+                                <span>Log Out</span>
+                            </button>
                         </form>
                     </div>
                 </nav>
