(feat: Risky) minor fixes

--- a/views/productCreate.html.twig
+++ b/views/productCreate.html.twig
@@ -43,7 +43,7 @@
                             <span>Report</span>
                         </a>
 
-                        <a href="/transaction" class="nav-item">
+                        <a href="/transactions" class="nav-item">
                             <svg
                                 class="nav-icon"
                                 width="20"
@@ -98,7 +98,7 @@
                     <div class="nav-section">
                         <div class="nav-label">AUTHENTICATION</div>
 
-                        <a href="/user" class="nav-item">
+                        <a href="/users" class="nav-item">
                             <svg
                                 class="nav-icon"
                                 width="20"
