--- a/views/transaction.html.twig
+++ b/views/transaction.html.twig
@@ -43,7 +43,7 @@
                             <span>Report</span>
                         </a>
 
-                        <a href="/transaction" class="nav-item active">
+                        <a href="/transactions" class="nav-item active">
                             <svg
                                 class="nav-icon"
                                 width="20"
@@ -98,7 +98,7 @@
                     <div class="nav-section">
                         <div class="nav-label">AUTHENTICATION</div>
 
-                        <a href="/user" class="nav-item">
+                        <a href="/users" class="nav-item">
                             <svg
                                 class="nav-icon"
                                 width="20"
@@ -160,12 +160,12 @@
 
                 <div class="content-container">
                     <div class="table-header">
-                        <!-- <form action="/transaction/create" method="get">
+                        <!-- <form action="/transactions/create" method="get">
                             <button class="btn-new-user">
                                 Create New Transaction +
                             </button>
                         </form> -->
-                        <a href="/transaction/create">
+                        <a href="/transactions/create">
                             <button class="btn-new-user">
                                 Create New Transaction +
                             </button>
@@ -192,7 +192,7 @@
                                     <td>
                                         <div class="action-buttons">
                                             <a
-                                                href="/transaction/{{
+                                                href="/transactions/{{
                                                     transaction.id
                                                 }}/create"
                                             >
