--- a/views/transactionCreate.html.twig
+++ b/views/transactionCreate.html.twig
@@ -44,7 +44,7 @@
                             <span>Report</span>
                         </a>
 
-                        <a href="/transaction" class="nav-item active">
+                        <a href="/transactions" class="nav-item active">
                             <svg
                                 class="nav-icon"
                                 width="20"
@@ -67,7 +67,7 @@
                             <span>Transaction</span>
                         </a>
 
-                        <a href="/product" class="nav-item">
+                        <a href="/products" class="nav-item">
                             <svg
                                 class="nav-icon"
                                 width="20"
@@ -99,7 +99,7 @@
                     <div class="nav-section">
                         <div class="nav-label">AUTHENTICATION</div>
 
-                        <a href="/user" class="nav-item">
+                        <a href="/users" class="nav-item">
                             <svg
                                 class="nav-icon"
                                 width="20"
