--- a/views/userCreate.html.twig
+++ b/views/userCreate.html.twig
@@ -35,7 +35,7 @@
                         <span>Report</span>
                     </a>
 
-                    <a href="/transaction" class="nav-item">
+                    <a href="/transactions" class="nav-item">
                         <svg class="nav-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <rect x="1" y="4" width="22" height="16" rx="2" ry="2"></rect>
                             <line x1="1" y1="10" x2="23" y2="10"></line>
