--- a/views/product.html.twig
+++ b/views/product.html.twig
@@ -44,7 +44,7 @@
                             <span>Report</span>
                         </a>
 
-                        <a href="/transaction" class="nav-item">
+                        <a href="/transactions" class="nav-item">
                             <svg
                                 class="nav-icon"
                                 width="20"
@@ -169,7 +169,7 @@
                         <table class="users-table">
                             <thead>
                                 <tr>
-                                    <th>Name</th>
+                                    <th>ID</th>                                    <th>Name</th>
                                     <th>Stock</th>
                                     <th>Price</th>
                                     <th>Option</th>
@@ -178,6 +178,7 @@
                             <tbody>
                                 {% for product in products %}
                                 <tr>
+                                    <td>{{ product.id }}</td>
                                     <td>{{ product.name }}</td>
                                     <td>{{ product.stock }}</td>
                                     <td>{{ product.price }}</td>
