(feat: Risky) add flowchart & minor fixes

--- a/views/transactionCreateWithId.html.twig
+++ b/views/transactionCreateWithId.html.twig
@@ -158,7 +158,7 @@
             <main class="main-content">
                 <div class="content-wrapper">
                     <div class="page-header">
-                        <div class="header-icon">
+                        <!--<div class="header-icon">
                             <svg
                                 class="back-icon"
                                 xmlns="http://www.w3.org/2000/svg"
@@ -174,10 +174,10 @@
                                 <line x1="19" y1="12" x2="5" y2="12"></line>
                                 <polyline points="12 19 5 12 12 5"></polyline>
                             </svg>
-                        </div>
+                        </div>-->
 
                         <div>
-                            <h2 class="page-title">Transaction Create</h2>
+                            <h2 class="page-title">Transaction Edit</h2>
                         </div>
                     </div>
 
