--- a/views/productCreate.html.twig
+++ b/views/productCreate.html.twig
@@ -159,10 +159,10 @@
                     <div class="page-header">
                         <div>
                             <h2 class="page-title">Product Create</h2>
-                            <div class="breadcrumb-wrapper">
-                                <div class="breadcrumb">Product</div>
-                                <div class="breadcrumb">/ Create</div>
-                            </div>
+                            <!-- <div class="breadcrumb-wrapper">
+                                <div class="breadcrumb"> Users</div>
+                                <div class="breadcrumb"> / Update</div>
+                            </div> -->
                         </div>
                     </div>
 
