--- a/views/productUpdate.html.twig
+++ b/views/productUpdate.html.twig
@@ -159,10 +159,10 @@
                     <div class="page-header">
                         <div>
                             <h2 class="page-title">Product Update</h2>
-                            <div class="breadcrumb-wrapper">
-                                <div class="breadcrumb">Prduct</div>
-                                <div class="breadcrumb">/ Update</div>
-                            </div>
+                            <!-- <div class="breadcrumb-wrapper">
+                                <div class="breadcrumb"> Users</div>
+                                <div class="breadcrumb"> / Update</div>
+                            </div> -->
                         </div>
                     </div>
 
