--- a/views/userCreate.html.twig
+++ b/views/userCreate.html.twig
@@ -83,33 +83,33 @@
 
                 <!-- Logout -->
                 <div class="nav-logout">
-                        <form
-                            action="/logout"
-                            method="post"
-                            class="nav-item logout"
-                        >
-                            <button type="submit" class="logout-button">
-                                <svg
-                                    class="nav-icon"
-                                    width="20"
-                                    height="20"
-                                    viewBox="0 0 24 24"
-                                    fill="none"
-                                    stroke="currentColor"
-                                    stroke-width="2"
-                                >
-                                    <path
-                                        d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
-                                    ></path>
-                                    <polyline
-                                        points="16 17 21 12 16 7"
-                                    ></polyline>
-                                    <line x1="21" y1="12" x2="9" y2="12"></line>
-                                </svg>
-                                <span>Log Out</span>
-                            </button>
-                        </form>
-                    </div>
+                    <form
+                        action="/logout"
+                        method="post"
+                        class="nav-item logout"
+                    >
+                        <button type="submit" class="logout-button">
+                            <svg
+                                class="nav-icon"
+                                width="20"
+                                height="20"
+                                viewBox="0 0 24 24"
+                                fill="none"
+                                stroke="currentColor"
+                                stroke-width="2"
+                            >
+                                <path
+                                    d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
+                                ></path>
+                                <polyline
+                                    points="16 17 21 12 16 7"
+                                ></polyline>
+                                <line x1="21" y1="12" x2="9" y2="12"></line>
+                            </svg>
+                            <span>Log Out</span>
+                        </button>
+                    </form>
+                </div>
             </nav>
         </aside>
 
@@ -121,10 +121,10 @@
 
                     <div>
                         <h2 class="page-title">User Create</h2>
-                        <div class="breadcrumb-wrapper">
+                        <!-- <div class="breadcrumb-wrapper">
                             <div class="breadcrumb"> Users</div>
-                            <div class="breadcrumb"> / Create</div>
-                        </div>
+                            <div class="breadcrumb"> / Update</div>
+                        </div> -->
                     </div>
                 </div>
 
