(feat: Risky) fixes user navigaation not show up on logined admin

--- a/views/user.html.twig
+++ b/views/user.html.twig
@@ -99,7 +99,7 @@
                     <div class="nav-section">
                         <div class="nav-label">AUTHENTICATION</div>
 
-                        <a href="/users" class="nav-item">
+                        <a href="/users" class="nav-item active">
                             <svg
                                 class="nav-icon"
                                 width="20"
