--- a/views/report.html.twig
+++ b/views/report.html.twig
@@ -199,9 +199,9 @@
                         <table class="summary-table">
                             <thead>
                                 <tr>
-                                    <th>Tanggal</th>
-                                    <th>Total Terjual</th>
-                                    <th>Harga</th>
+                                    <th>Date</th>
+                                    <th>Total Sold</th>
+                                    <th>Total Price</th>
                                 </tr>
                             </thead>
                             <tbody>
