--- a/views/transactionCreateWithId.html.twig
+++ b/views/transactionCreateWithId.html.twig
@@ -193,22 +193,24 @@
                             <!-- NAME -->
                             <div class="form-group full-width">
                                 <label for="id" class="form-label">
-                                    ID <span class="required">*</span>
+                                    Product <span class="required">*</span>
                                 </label>
 
-                                <input
-                                    type="text"
-                                    id="id"
-                                    name="id"
-                                    class="form-input"
-                                    placeholder="Input id"
-                                    value="{% if input.id is defined %}{{
-                                        input.id
-                                    }}{% endif %}"
-                                />
+                                <select id="id" name="id" class="form-input">
+                                    <option value="">-- Select Product --</option>
+
+                                    {% for product in products %}
+                                        <option 
+                                            value="{{ product.id }}"
+                                            {% if input.id is defined and input.id == product.id %}selected{% endif %}
+                                        >
+                                            {{ product.name }} (Stock: {{ product.stock }})
+                                        </option>
+                                    {% endfor %}
+                                </select>
 
                                 {% if errors.id is defined %}
-                                <div class="error">{{ errors.id }}</div>
+                                    <div class="error">{{ errors.id }}</div>
                                 {% endif %}
                             </div>
 
@@ -249,7 +251,7 @@
                             <table class="users-table">
                                 <thead>
                                     <tr>
-                                        <th>Id Product</th>
+                                        <th>Product</th>
                                         <th>Total Items</th>
                                         <th>Options</th>
                                     </tr>
@@ -259,7 +261,7 @@
                                     transactionDetails %}
                                     <tr>
                                         <td>
-                                            {{ transactionDetails.product_id }}
+                                            {{ productMap[transactionDetails.product_id] }}
                                         </td>
                                         <td>{{ transactionDetails.amount }}</td>
 
